syntax = "proto3";

message BotIdentifierData {
    string bot_id = 1;
}
